Adding templates to master

--- a/CodingSchool/HTML/LearnWithLeon/notes.html
+++ b/CodingSchool/HTML/LearnWithLeon/notes.html
@@ -7,3 +7,6 @@
 <p>
     Content Decisions "On mobile, do we want to see all content?" How do we make those content decisions? Media queries.
 </p>
+
+<p>Media queries Screen is equivalent to 0. Example: @media Screen to 600px
+</p>
