--- a/CodingSchool/HTML/LearnWithLeon/LearnWithLeon&Friends.HTML
+++ b/CodingSchool/HTML/LearnWithLeon/LearnWithLeon&Friends.HTML
@@ -12,7 +12,7 @@
         <h1>Learn With Leon & Friends</h1>
         <nav class="Navigation">
             <ul>
-                <a href="LearnWithLeon&Friends.HTML"><li>About Us TESTING</li></a>
+                <a href="LearnWithLeon&Friends.HTML"><li>About Us</li></a>
                 <a href="LWLPortfolio.HTML"><li>Portfolio</li></a>
             </ul>
         </nav>
