Made changes to Nav

--- a/MusicSite/HTML/home.html
+++ b/MusicSite/HTML/home.html
@@ -31,10 +31,10 @@
     </header>
     <section class="releases">
         <h2>Releases</h2>
-        <a href="https://open.spotify.com/album/6rxdZBtymURSAMf7PfLdLI"><img src="/Users/michaelparker/Documents/Coding/MusicSite/Assets/QSFALR.png"></a>
+        <a href="https://open.spotify.com/album/6rxdZBtymURSAMf7PfLdLI"><img src="/Users/michael.parker/Desktop/BUILDS/Coding/MusicSite/Assets/QSFALR.png"></a>
         <iframe style="border: radius 18px;px" src="https://open.spotify.com/embed/album/6rxdZBtymURSAMf7PfLdLI?utm_source=generator" width="100%" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
     </section>
-    
+
 
     <script type="text/javascript" src="js/main.js"></script>
 </body>
