--- a/MusicSite/HTML/home.html
+++ b/MusicSite/HTML/home.html
@@ -19,9 +19,9 @@
 
 <body>
     <header>
-        <h1>Michael Parker</h1>
-        <nav>
-            <ul>
+        <nav class="navbar">
+            <h1 class="logo">Michael Parker</h1>
+            <ul class="navitems">
                 <li><a href="home.html">Home</a></li>
                 <li><a href="Upcoming Projects.html">Upcoming Projects</a></li>
                 <li><a href="Blog.html">Blog</a></li>
@@ -29,13 +29,13 @@
             </ul>
         </nav>
     </header>
-    <section class="releases">
+    <section class="title">
         <h2>Releases</h2>
-        <a href="https://open.spotify.com/album/6rxdZBtymURSAMf7PfLdLI"><img src="/Users/michael.parker/Desktop/BUILDS/Coding/MusicSite/Assets/QSFALR.png"></a>
-        <iframe style="border: radius 18px;px" src="https://open.spotify.com/embed/album/6rxdZBtymURSAMf7PfLdLI?utm_source=generator" width="100%" height="500" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
     </section>
-
-
+    <section class="releases">
+        <a class="releaseitems" href="https://open.spotify.com/album/6rxdZBtymURSAMf7PfLdLI"><img src="/Users/michael.parker/Desktop/BUILDS/Coding/MusicSite/Assets/QSFALR.png"></a>
+        <iframe class="releaseitems" src="https://open.spotify.com/embed/album/6rxdZBtymURSAMf7PfLdLI?utm_source=generator" width="50%" height="500" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+    </section>
     <script type="text/javascript" src="js/main.js"></script>
 </body>
 
