Adjusted File Path for img

--- a/MusicSite/HTML/home.html
+++ b/MusicSite/HTML/home.html
@@ -33,7 +33,7 @@
         <h2>Releases</h2>
     </section>
     <section class="releases">
-        <a class="releaseitems" href="https://open.spotify.com/album/6rxdZBtymURSAMf7PfLdLI"><img src="/Users/michael.parker/Desktop/BUILDS/Coding/MusicSite/Assets/QSFALR.png"></a>
+        <a class="releaseitems" href="https://open.spotify.com/album/6rxdZBtymURSAMf7PfLdLI"><img src="/Users/michaelparker/Documents/Coding/MusicSite/Assets/QSFALR.png"></a>
         <iframe class="releaseitems" src="https://open.spotify.com/embed/album/6rxdZBtymURSAMf7PfLdLI?utm_source=generator" width="50%" height="500" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
     </section>
     <script type="text/javascript" src="js/main.js"></script>
