Added Flex for multiple Tracis

--- a/MusicSite/HTML/Dissect.html
+++ b/MusicSite/HTML/Dissect.html
@@ -34,6 +34,7 @@
     </section>
     <p>Here, you can totally dissect each and every track from my last album. I've broken each song into four elements, and you can hear each individual element.</p>
     <section class="dissect">
+        <section class="dissectitems">
         <h3 class="dissecttrackname">Far</h3>
         <div class="dissectitems">Drums</div>
         <audio src="/Users/michaelparker/Documents/Coding/MusicSite/Assets/Audio Files/Far/Far Drums.wav" controls autoplay>Far Drums</audio>
@@ -43,6 +44,48 @@
         <audio src="/Users/michaelparker/Documents/Coding/MusicSite/Assets/Audio Files/Far/Far Bass.wav" controls autoplay>Far Bass</audio>
         <div class="dissectitems">Vocals</div>
         <audio src="/Users/michaelparker/Documents/Coding/MusicSite/Assets/Audio Files/Far/Far Vocals.wav" controls autoplay>Far Vocals</audio>
+        <div class="dissectitems">All Tracks</div>
+        <audio src="/Users/michaelparker/Documents/Coding/MusicSite/Assets/Audio Files/Far/Far All.wav" controls autoplay>Far All</audio>
+        </section>
+        <section class="dissectitems">
+            <h3 class="dissecttrackname">Far</h3>
+            <div class="dissectitems">Drums</div>
+            <audio src="/Users/michaelparker/Documents/Coding/MusicSite/Assets/Audio Files/Far/Far Drums.wav" controls autoplay>Far Drums</audio>
+            <div class="dissectitems">Synth</div>
+            <audio src="/Users/michaelparker/Documents/Coding/MusicSite/Assets/Audio Files/Far/Far Instrumentation.wav" controls autoplay>Far Instrumentation</audio>
+            <div class="dissectitems">Bass</div>
+            <audio src="/Users/michaelparker/Documents/Coding/MusicSite/Assets/Audio Files/Far/Far Bass.wav" controls autoplay>Far Bass</audio>
+            <div class="dissectitems">Vocals</div>
+            <audio src="/Users/michaelparker/Documents/Coding/MusicSite/Assets/Audio Files/Far/Far Vocals.wav" controls autoplay>Far Vocals</audio>
+            <div class="dissectitems">All Tracks</div>
+            <audio src="/Users/michaelparker/Documents/Coding/MusicSite/Assets/Audio Files/Far/Far All.wav" controls autoplay>Far All</audio>
+        </section>
+        <section class="dissectitems">
+            <h3 class="dissecttrackname">Far</h3>
+            <div class="dissectitems">Drums</div>
+            <audio src="/Users/michaelparker/Documents/Coding/MusicSite/Assets/Audio Files/Far/Far Drums.wav" controls autoplay>Far Drums</audio>
+            <div class="dissectitems">Synth</div>
+            <audio src="/Users/michaelparker/Documents/Coding/MusicSite/Assets/Audio Files/Far/Far Instrumentation.wav" controls autoplay>Far Instrumentation</audio>
+            <div class="dissectitems">Bass</div>
+            <audio src="/Users/michaelparker/Documents/Coding/MusicSite/Assets/Audio Files/Far/Far Bass.wav" controls autoplay>Far Bass</audio>
+            <div class="dissectitems">Vocals</div>
+            <audio src="/Users/michaelparker/Documents/Coding/MusicSite/Assets/Audio Files/Far/Far Vocals.wav" controls autoplay>Far Vocals</audio>
+            <div class="dissectitems">All Tracks</div>
+            <audio src="/Users/michaelparker/Documents/Coding/MusicSite/Assets/Audio Files/Far/Far All.wav" controls autoplay>Far All</audio>
+        </section>
+        <section class="dissectitems">
+            <h3 class="dissecttrackname">Far</h3>
+            <div class="dissectitems">Drums</div>
+            <audio src="/Users/michaelparker/Documents/Coding/MusicSite/Assets/Audio Files/Far/Far Drums.wav" controls autoplay>Far Drums</audio>
+            <div class="dissectitems">Synth</div>
+            <audio src="/Users/michaelparker/Documents/Coding/MusicSite/Assets/Audio Files/Far/Far Instrumentation.wav" controls autoplay>Far Instrumentation</audio>
+            <div class="dissectitems">Bass</div>
+            <audio src="/Users/michaelparker/Documents/Coding/MusicSite/Assets/Audio Files/Far/Far Bass.wav" controls autoplay>Far Bass</audio>
+            <div class="dissectitems">Vocals</div>
+            <audio src="/Users/michaelparker/Documents/Coding/MusicSite/Assets/Audio Files/Far/Far Vocals.wav" controls autoplay>Far Vocals</audio>
+            <div class="dissectitems">All Tracks</div>
+            <audio src="/Users/michaelparker/Documents/Coding/MusicSite/Assets/Audio Files/Far/Far All.wav" controls autoplay>Far All</audio>
+        </section>
     </section>
     <script type="text/javascript" src="js/main.js"></script>
 </body>
