--- a/MusicSite/HTML/Dissect.html
+++ b/MusicSite/HTML/Dissect.html
@@ -36,54 +36,54 @@
     <section class="dissect">
         <section class="dissectitems">
         <h3 class="dissecttrackname">Far</h3>
-        <div class="dissectitems">Drums</div>
+        <div class="dissecttrack">Drums</div>
         <audio src="/Users/michaelparker/Documents/Coding/MusicSite/Assets/Audio Files/Far/Far Drums.wav" controls autoplay>Far Drums</audio>
-        <div class="dissectitems">Synth</div>
+        <div class="dissecttrackobject">Synth</div>
         <audio src="/Users/michaelparker/Documents/Coding/MusicSite/Assets/Audio Files/Far/Far Instrumentation.wav" controls autoplay>Far Instrumentation</audio>
-        <div class="dissectitems">Bass</div>
+        <div class="dissecttrackobject">Bass</div>
         <audio src="/Users/michaelparker/Documents/Coding/MusicSite/Assets/Audio Files/Far/Far Bass.wav" controls autoplay>Far Bass</audio>
-        <div class="dissectitems">Vocals</div>
+        <div class="dissecttrackobject">Vocals</div>
         <audio src="/Users/michaelparker/Documents/Coding/MusicSite/Assets/Audio Files/Far/Far Vocals.wav" controls autoplay>Far Vocals</audio>
-        <div class="dissectitems">All Tracks</div>
+        <div class="dissecttrackobject">All Tracks</div>
         <audio src="/Users/michaelparker/Documents/Coding/MusicSite/Assets/Audio Files/Far/Far All.wav" controls autoplay>Far All</audio>
         </section>
         <section class="dissectitems">
             <h3 class="dissecttrackname">Far</h3>
-            <div class="dissectitems">Drums</div>
+            <div class="dissecttrackobject">Drums</div>
             <audio src="/Users/michaelparker/Documents/Coding/MusicSite/Assets/Audio Files/Far/Far Drums.wav" controls autoplay>Far Drums</audio>
-            <div class="dissectitems">Synth</div>
+            <div class="dissecttrackobject">Synth</div>
             <audio src="/Users/michaelparker/Documents/Coding/MusicSite/Assets/Audio Files/Far/Far Instrumentation.wav" controls autoplay>Far Instrumentation</audio>
-            <div class="dissectitems">Bass</div>
+            <div class="dissecttrackobject">Bass</div>
             <audio src="/Users/michaelparker/Documents/Coding/MusicSite/Assets/Audio Files/Far/Far Bass.wav" controls autoplay>Far Bass</audio>
-            <div class="dissectitems">Vocals</div>
+            <div class="dissecttrackobject">Vocals</div>
             <audio src="/Users/michaelparker/Documents/Coding/MusicSite/Assets/Audio Files/Far/Far Vocals.wav" controls autoplay>Far Vocals</audio>
-            <div class="dissectitems">All Tracks</div>
+            <div class="dissecttrackobject">All Tracks</div>
             <audio src="/Users/michaelparker/Documents/Coding/MusicSite/Assets/Audio Files/Far/Far All.wav" controls autoplay>Far All</audio>
         </section>
         <section class="dissectitems">
             <h3 class="dissecttrackname">Far</h3>
-            <div class="dissectitems">Drums</div>
+            <div class="dissecttrackobject">Drums</div>
             <audio src="/Users/michaelparker/Documents/Coding/MusicSite/Assets/Audio Files/Far/Far Drums.wav" controls autoplay>Far Drums</audio>
-            <div class="dissectitems">Synth</div>
+            <div class="dissecttrackobject">Synth</div>
             <audio src="/Users/michaelparker/Documents/Coding/MusicSite/Assets/Audio Files/Far/Far Instrumentation.wav" controls autoplay>Far Instrumentation</audio>
-            <div class="dissectitems">Bass</div>
+            <div class="dissecttrackobject">Bass</div>
             <audio src="/Users/michaelparker/Documents/Coding/MusicSite/Assets/Audio Files/Far/Far Bass.wav" controls autoplay>Far Bass</audio>
-            <div class="dissectitems">Vocals</div>
+            <div class="dissecttrackobject">Vocals</div>
             <audio src="/Users/michaelparker/Documents/Coding/MusicSite/Assets/Audio Files/Far/Far Vocals.wav" controls autoplay>Far Vocals</audio>
-            <div class="dissectitems">All Tracks</div>
+            <div class="dissecttrackobject">All Tracks</div>
             <audio src="/Users/michaelparker/Documents/Coding/MusicSite/Assets/Audio Files/Far/Far All.wav" controls autoplay>Far All</audio>
         </section>
         <section class="dissectitems">
             <h3 class="dissecttrackname">Far</h3>
-            <div class="dissectitems">Drums</div>
+            <div class="dissecttrackobject">Drums</div>
             <audio src="/Users/michaelparker/Documents/Coding/MusicSite/Assets/Audio Files/Far/Far Drums.wav" controls autoplay>Far Drums</audio>
-            <div class="dissectitems">Synth</div>
+            <div class="dissecttrackobject">Synth</div>
             <audio src="/Users/michaelparker/Documents/Coding/MusicSite/Assets/Audio Files/Far/Far Instrumentation.wav" controls autoplay>Far Instrumentation</audio>
-            <div class="dissectitems">Bass</div>
+            <div class="dissecttrackobject">Bass</div>
             <audio src="/Users/michaelparker/Documents/Coding/MusicSite/Assets/Audio Files/Far/Far Bass.wav" controls autoplay>Far Bass</audio>
-            <div class="dissectitems">Vocals</div>
+            <div class="dissecttrackobject">Vocals</div>
             <audio src="/Users/michaelparker/Documents/Coding/MusicSite/Assets/Audio Files/Far/Far Vocals.wav" controls autoplay>Far Vocals</audio>
-            <div class="dissectitems">All Tracks</div>
+            <div class="dissecttrackobject">All Tracks</div>
             <audio src="/Users/michaelparker/Documents/Coding/MusicSite/Assets/Audio Files/Far/Far All.wav" controls autoplay>Far All</audio>
         </section>
     </section>
