--- a/FinalFantasy/index.html
+++ b/FinalFantasy/index.html
@@ -19,11 +19,16 @@
 
     <h2>Select Game</h2>
     <ul>
-        <li id="FF1"><img src="/Users/michael.parker/Desktop/class12-materials/background-picker/img/FF1Logo.jpeg" alt="Final Fantasy I"></li>
-        <li id="FF2"><img src="/Users/michael.parker/Desktop/class12-materials/background-picker/img/FF2Logo.png" alt="Final Fantasy II"></li>
-        <li id="FF3"><img src="/Users/michael.parker/Desktop/class12-materials/background-picker/img/FF3Logo.jpeg" alt="Final Fantasy III"></li>
-        <li id="FF4"><img src="/Users/michael.parker/Desktop/class12-materials/background-picker/img/FF4Logo.jpeg" alt="Final Fantasy IV"></li>
-        <li id="FF5"><img src="/Users/michael.parker/Desktop/class12-materials/background-picker/img/FF5Logo.jpeg" alt="Final Fantasy V"></li>
+        <li id="FF1"><img src="/Users/michaelparker/Documents/Coding/FinalFantasy/img/FF1Logo.jpeg" alt="Final Fantasy I"></li>
+        <li id="FF2"><img src="/Users/michaelparker/Documents/Coding/FinalFantasy/img/FF2Logo.png" alt="Final Fantasy II"></li>
+        <li id="FF3"><img src="/Users/michaelparker/Documents/Coding/FinalFantasy/img/FF3Logo.png" alt="Final Fantasy III"></li>
+        <li id="FF4"><img src="/Users/michaelparker/Documents/Coding/FinalFantasy/img/FF4Logo.png" alt="Final Fantasy IV"></li>
+        <li id="FF5"><img src="/Users/michaelparker/Documents/Coding/FinalFantasy/img/FF5Logo.png" alt="Final Fantasy V"></li>
+        <li id="FF6"><img src="/Users/michaelparker/Documents/Coding/FinalFantasy/img/FF6Logo.png" alt="Final Fantasy VI"></li>
+        <li id="FF7"><img src="/Users/michaelparker/Documents/Coding/FinalFantasy/img/FF7Logo.png" alt="Final Fantasy VII"></li>
+        <li id="FF8"><img src="/Users/michaelparker/Documents/Coding/FinalFantasy/img/FF8Logo.png" alt="Final Fantasy VIII"></li>
+        <li id="FF9"><img src="/Users/michaelparker/Documents/Coding/FinalFantasy/img/FF9Logo.png" alt="Final Fantasy IX"></li>
+        <li id="FF10"><img src="/Users/michaelparker/Documents/Coding/FinalFantasy/img/FF10Logo.png" alt="Final Fantasy X"></li>
     </ul>
 
     <script type="text/javascript" src="js/main.js"></script>
