Added fonts and applied styling

--- a/Ramsey Layouts/Ramsey Coaching/financial-coaching.html
+++ b/Ramsey Layouts/Ramsey Coaching/financial-coaching.html
@@ -5,15 +5,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
     <title>Financial Coach Master Training~</title>
 </head>
 
 <body>
     <img src="" alt="" class="background">
+    <section class="container">
     <section class="header">
-        <img src="/Users/michael.parker/Desktop/Ramsey Layouts/Ramsey Coaching/img/masthead-logo-ramsey.svg" alt="Ramsey" class="masthead">
-        <form action="post"></form>
+        <section class="upperHeader">
+        <img src="https://cdn.ramseysolutions.net/media/rscom/logos/masthead-logo-ramsey.svg" alt="Ramsey" class="masthead">
+        <input type="text" placeholder="Search">
+        </section>
         <ul class="mainNav">
             <li>Products</li>
             <li>Shows & Events</li>
@@ -24,10 +30,13 @@
             <li>Store</li>
         </ul>
     </section>
-    <img src="" alt="" class="logo">
+    <section class="body">
+    <img src="https://cdn.ramseysolutions.net/media/ramsey-plus/coaching/-logo/FCMasterTraining-RGB-logo-white-3-21_FNL.svg" alt="" class="logo">
     <h1>The proven plan for you to become a world-class coach.</h1>
     <h2>Help people and love what you do. Learn how to become a confident financial coach.</h2>
-    <a href="" class="whitebluebtn"></a>
+    <a href="" class="whitebluebtn">Learn More</a>
+</section>
+</section>
 
 
 </body>
