finished first section

--- a/Ramsey Layouts/Ramsey Coaching/financial-coaching.html
+++ b/Ramsey Layouts/Ramsey Coaching/financial-coaching.html
@@ -21,13 +21,13 @@
         <input type="text" placeholder="Search">
         </section>
         <ul class="mainNav">
-            <li>Products</li>
-            <li>Shows & Events</li>
-            <li>Personalities</li>
-            <li>Trusted Pros</li>
-            <li>Free Tools</li>
-            <li>Articles</li>
-            <li>Store</li>
+            <a href="https://www.ramseysolutions.com/guided-plans?snid=products"><li>Products</li></a>
+            <a href="https://www.ramseysolutions.com/shows?snid=shows-and-events"><li>Shows & Events</li></a>
+            <a href="https://www.ramseysolutions.com/personalities?snid=personalities"><li>Personalities</li></a>
+            <a href="https://www.ramseysolutions.com/trusted?snid=trusted-pros"><li>Trusted Pros</li></a>
+            <a href="https://www.ramseysolutions.com/tools?snid=free-tools"><li>Free Tools</li></a>
+            <a href="https://www.ramseysolutions.com/articles?snid=articles"><li>Articles</li>
+            <a href="https://www.ramseysolutions.com/store?snid=store"><li>Store</li></a>
         </ul>
     </section>
     <section class="body">
